[omnibox] Narrow tab switch button IsSelected behavior

Previously OmniboxTabSwitchButton::IsSelected() wasn't asking if
*this* result was selected, only if "the tab switch button" was
focused. This could refer to another result. This change narrows
the implementation of IsSelected() to check if this particular
result is also selected.

Bug: 886606
Change-Id: I463151848e6cefdbe3afa360d3dbc0e03d2c40ee
Reviewed-on: https://chromium-review.googlesource.com/1234033
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Kevin Bailey <krb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592825}
Former-commit-id: 70809a4582d7e955f201e7b0bc49e1065a25e920